(POST STRETCH) : fixed a few styles for the links

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-color: #f2f2f2;
+  text-align: center;
 }
-
+a {
+  text-decoration: none;
+  color: #333;
+}
 .movie-card {
   background-color: #fff;
   border: 0;
